2010-07-05  Frank Krueger <fak@kruegersystems.com>

	* I moved NSAffineTransform to Foundation and added the
	important functions. Previously it was in AppKit and lacked
	functions to actually manipulate the matrix.

	* Changed the path to CoreGraphics lib. The previous path did not
	work. New path suggested by Geoff Norton.

	* Changed NSGraphicsContext.GraphicsPort to return CGContext
	instead of IntPtr. This seems to be the correct way to get a
	CGContext and it works well.

2010-06-20  Koen Pijnenburg <kpijnenburg@supportware.nl>

	* appkit.cs: Apply patches from Koen to add support for the
	delegate and datasources on the NSOutlineView. 

2010-04-23  Miguel de Icaza  <miguel@novell.com>

	* appkit.cs: Contributions from James Clancey:

	#import <AppKit/NSAnimationContext.h>		Done
	#import <AppKit/NSFontPanel.h>			Done
	#import <AppKit/NSCachedImageRep.h>		Done
	#import <AppKit/NSCIImageRep.h>			Done
	#import <AppKit/NSCustomImageRep.h>		Done
	#import <AppKit/NSEPSImageRep.h>		Done

	* Worked to get a bunch of NSArray strongly typed.
	
	* appkit.cs: Added contributions from James Clancey to the
	NSTableView classes.
	
	* AppKit/Enums.cs: Contribution from James Clancey
	<james.clancey@gmail.com>

2010-03-06  Miguel de Icaza  <miguel@novell.com>

	* ObjCRuntime/*: Make this build by making the use of "IntPtr"
	uniform in the Messaging classes and its consumers.

2010-02-22  Miguel de Icaza  <miguel@novell.com>

	* appkit.cs: Added NSWindow, NSWindowController
