@@ -1,3 +1,8 @@
+2010-09-14	Eric Maupin	<me@ermau.com>
+
+	* Added NSEvent.AddGlobalMonitorForEventsMatchingMask and
+	NSEvent.AddLocalMonitorForEventsMatchingMask
+
 2010-07-05  Frank Krueger <fak@kruegersystems.com>
 
 	* I moved NSAffineTransform to Foundation and added the
